👥 Auth Screens, Home Navigation, Home Slider

--- a/app.json
+++ b/app.json
@@ -4,6 +4,14 @@
     "slug": "film-arsiv",
     "version": "1.0.0",
     "orientation": "portrait",
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"]
+        }
+      ]
+    ],
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
