Upgrade All Packages

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "film-arsiv",
     "version": "1.0.0",
     "orientation": "portrait",
+    "newArchEnabled": true,
     "plugins": [
       [
         "expo-font",
