--- a/package.json
+++ b/package.json
@@ -6,40 +6,34 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
-<<<<<<< HEAD
     "@expo-google-fonts/inter": "^0.2.3",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "expo": "~51.0.28",
+    "@react-navigation/bottom-tabs": "^6.0.6",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.0.6",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.0",
+    "expo-checkbox": "~3.0.0",
     "expo-linear-gradient": "~13.0.2",
-    "expo-splash-screen": "^0.27.5",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.1.23",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.3.2"
-=======
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
->>>>>>> 923e113 (Initial commit)
+    "@babel/core": "^7.24.0",
+    "tailwindcss": "^3.4.15"
   },
   "private": true
 }
