Video Player, Expo 52, Player Episodes Section

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@/screens/*": ["screens/*"],
       "@/hooks/*": ["hooks/*"],
       "@/mocks/*": ["mocks/*"],
+      "@/utils/*": ["utils/*"],
 
       // Assets
       "@/assets/*": ["assets/*"],
