--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
     "@react-navigation/bottom-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.0.6",
-    "@types/react": "~18.2.79",
-    "expo": "^51.0.0",
-    "expo-checkbox": "~3.0.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
+    "@types/react": "~18.3.12",
+    "expo": "^52.0.0",
+    "expo-av": "~15.0.1",
+    "expo-checkbox": "~4.0.0",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "typescript": "~5.3.3",
-    "expo-av": "~14.0.7"
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-reanimated-carousel": "^4.0.0-canary.22",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
